--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,31 @@
 <router-outlet />
-<div class="container">
-  <app-todo-list></app-todo-list>
+<div class="container p-2">
+  <div class="btn-group" role="group">
+    <button
+      type="button"
+      class="btn btn-primary"
+      [class.active]="paginaSelezionata == 'todo'"
+      (click)="selezionaPagina('todo')"
+    >
+      Todo
+    </button>
+    <button
+      type="button"
+      class="btn btn-primary"
+      [class.active]="paginaSelezionata == 'auto'"
+      (click)="selezionaPagina('auto')"
+    >
+      Auto
+    </button>
+  </div>
+  <hr />
+  @if (paginaSelezionata == "auto") {
+  <section>
+    <app-auto-list></app-auto-list>
+  </section>
+  } @if (paginaSelezionata == "todo") {
+  <section>
+    <app-todo-list></app-todo-list>
+  </section>
+  }
 </div>
