--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,7 @@
 <router-outlet />
 <div class="container p-2">
+  <app-carrello-mini></app-carrello-mini>
+  <hr />
   <div class="btn-group" role="group">
     <button
       type="button"
