--- a/src/app/components/auto-item/auto-item.html
+++ b/src/app/components/auto-item/auto-item.html
@@ -1,1 +1,12 @@
-<p>auto-item works!</p>
+@if(auto) {
+<div class="card">
+  <div class="card-body">
+    <h3>{{ auto.marca }}</h3>
+    <h4>{{ auto.modello }}</h4>
+    <p>{{ auto.prezzo | currency }}</p>
+    <button type="button" class="btn btn-primary" (click)="aggiungiACarrello()">
+      <i class="bi bi-cart-fill"></i>
+    </button>
+  </div>
+</div>
+}
