--- a/src/app/components/carrello-full/carrello-full.html
+++ b/src/app/components/carrello-full/carrello-full.html
@@ -7,4 +7,6 @@
   <li class="list-group-item">{{ a.marca }} {{ a.modello }} - {{ a.prezzo | currency }}</li>
   }
 </ul>
+<hr />
+<button class="btn btn-primary" (click)="svuotaCarrello()">Svuota</button>
 }
